--- a/templates/changelogs.html
+++ b/templates/changelogs.html
@@ -1,6 +1,6 @@
 <div class="changelogs">
-    {{#each changelogs.important}}
-    <div class="chl-module-important" data-name="{{moduleName}}">
+    {{#each changelogs.critical}}
+    <div class="chl-module-critical" data-name="{{moduleName}}">
         <h2 class="chl-module-header">
             <span class="chl-toggle-icon">
                 <i class="fa fa-caret-right" id="toggle-btn"></i>
