this is a changelog

--- a/templates/changelogs.html
+++ b/templates/changelogs.html
@@ -8,7 +8,7 @@
             {{moduleName}}
         </h2>
         <div class="chl-module-content hidden">
-            {{html}}
+            {{{html}}}
         </div> 
     </div>
     {{/each}}
@@ -22,7 +22,7 @@
             {{moduleName}}
         </h2>
         <div class="chl-module-content hidden">
-            {{html}}
+            {{{html}}}
         </div> 
     </div>
     {{/each}}
@@ -36,7 +36,7 @@
             {{moduleName}}
         </h2>
         <div class="chl-module-content hidden">
-            {{html}}
+            {{{html}}}
         </div> 
     </div>
     {{/each}}
@@ -50,7 +50,7 @@
             {{moduleName}}
         </h2>
         <div class="chl-module-content hidden">
-            {{html}}
+            {{{html}}}
         </div> 
     </div>
     {{/each}}
