--- a/styles/changelogs.css
+++ b/styles/changelogs.css
@@ -3,37 +3,81 @@
 }
 
 .chl-module-content{
+    text-shadow: none;
     color: black;
-    overflow: hidden;
-    font-size: 12px;
+    overflow-y: scroll;
+    font-size: 0.8rem;
+    padding-bottom: 0.5rem;
+    max-height : 400px;
+    transition: max-height 0.3s;
+    transition-delay: 0ms;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 .chl-module-content.hidden{
-    height: 0px;
+    max-height: 0px;
+    padding-bottom: 0px;
+    overflow: hidden;
 }
 
 .chl-module-minor{
-    color: rgb(0, 110, 255);
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 3px black;
     font-size:12px;
+}
+
+.chl-module-minor .chl-module-header{
+    background-color: rgb(0, 110, 255);
+    border: 2px solid rgb(0, 63, 145);
+    border-radius: 5px;
 }
 
 .chl-module-major{
-    color: rgb(143, 121, 0);
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 3px black;
     font-size:12px;
+}
+
+.chl-module-major .chl-module-header{
+    background-color: #ffa500;
+    border: 2px solid rgb(150, 150, 0);
+    border-radius: 5px;
 }
 
 .chl-module-breaking{
-    color: red;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 3px black;
     font-size:12px;
+}
+
+.chl-module-breaking .chl-module-header{
+    background-color: red;
+    border: 2px solid rgb(136, 0, 0);
+    border-radius: 5px;
 }
 
 .chl-module-critical{
-    color: blueviolet;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 3px black;
     font-size:12px;
 }
 
+.chl-module-critical .chl-module-header{
+    background-color: blueviolet;
+    border: 2px solid rgb(65, 31, 97);
+    border-radius: 5px;
+}
+
 .chl-module-header{
+    padding: 0.2rem;
+    padding-left: 0.5rem;
     font-size:14px;
+}
+
+.chl-module-header:hover{
+    filter: brightness(130%);
+    cursor: pointer;
 }
 
 .chl-toggle-icon{
